Hide scrollbar on main page, make scrolling less buggy

--- a/styles.scss
+++ b/styles.scss
@@ -5,6 +5,11 @@
 
 html, body {
   height: 100%;
+  &::-webkit-scrollbar {
+    width: 0;
+  }
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 body {
